--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 		"@babel/core": "^7.4.5",
 		"@babel/preset-env": "^7.4.5",
 		"babel-loader": "^8.0.6",
-		"gulp": "3.9.1",
+		"gulp": "^4.0.2",
 		"liferay-theme-deps-7.1": "8.0.9",
-		"liferay-theme-tasks": "8.0.9",
+		"liferay-theme-tasks": "^9.5.0",
 		"webpack": "^4.35.0",
 		"webpack-cli": "^3.3.5"
 	},
